# gnome-control-center

./: .gitignore  meson.build  meson_options.txt
debian/: changelog  (+6 more)
panels/: meson.build
panels/applications/: cc-applications-panel.c  cc-applications-panel.ui
panels/bluetooth/: cc-bluetooth-panel.c
panels/common/: cc-permission-infobar.ui  cc-util.c  cc-util.h  pureos.h
panels/datetime/: cc-datetime-panel.ui
panels/display/: cc-display-panel.c  cc-display-panel.ui
panels/droidian-encryption/: cc-droidian-encryption-panel.c  cc-droidian-encryption-panel.h  cc-droidian-encryption-panel.ui  droidian-encryption.gresource.xml  gnome-droidian-encryption-panel.desktop.in  gnome-droidian-encryption-panel.desktop.in.in  meson.build
panels/fingerprint/: cc-fingerprint-panel.c  cc-fingerprint-panel.css  cc-fingerprint-panel.h  cc-fingerprint-panel.ui  fingerprint.gresource.xml  gnome-fingerprint-panel.desktop.in  gnome-fingerprint-panel.desktop.in.in  meson.build
panels/mouse/: cc-mouse-panel.c
panels/mtp/: cc-mtp-panel.c  cc-mtp-panel.h  cc-mtp-panel.ui  gnome-mtp-panel.desktop.in  gnome-mtp-panel.desktop.in.in  meson.build  mtp.gresource.xml
panels/multitasking/: cc-multitasking-panel.c  cc-multitasking-panel.h
panels/network/: cc-wifi-panel.c
panels/nfc/: cc-nfc-panel.c  cc-nfc-panel.h  cc-nfc-panel.ui  gnome-nfc-panel.desktop.in  gnome-nfc-panel.desktop.in.in  meson.build  nfc.gresource.xml
panels/power/: cc-batman-config-control.c  cc-batman-config-control.h  cc-power-panel.c  cc-power-panel.ui  meson.build
panels/privacy/: cc-privacy-panel.ui
(+104 files in other folders)
